-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.11.0 Beta 1
-
None
-
Kunbuntu 17.10, gcc 7.2, libclang 5.0 (Qt Creator)
For PySide, .shiboken complains:
qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtConcurrent, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtconcurrent-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtCore, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtcore-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtDataVisualization, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtdatavisualization-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtGui, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtgui-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtHelp, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qthelp-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtMultimedia, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtmultimedia-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtNetwork, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtnetwork-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtOpenGL, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtopengl-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtPrintSupport, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtprintsupport-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtQml, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtqml-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtQuick, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtquick-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtQuickWidgets, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtquickwidgets-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtSql, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtsql-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtSvg, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtsvg-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtTest, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qttest-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtUiTools, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtuitools-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtWidgets, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtwidgets-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtXml, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtxml-module.webxml qt.shiboken: (doc) Can't find qdoc file for module PySide2.QtXmlPatterns, tried: ...pyside-setup/testenv59_511s_33_build/py3.6-qt5.11.0-64bit-release/pyside2/doc/qdoc-output/webxml/qtxmlpatterns-module.webxml
It seems there is some implementation missing?
- is required for
-
PYSIDE-363
Fix documentation generation
-
- Closed
-