qdoc: WebXML: Fix generation of module pages

Collection nodes (such as module pages) are no longer aggregates,
check for them explicitly.

Task-number: QTBUG-66545
Change-Id: I6b50a049138c44f2e99fe06cebc99887f2408c2e
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>